<resources>
    <string name="app_name">InstaTrain</string>

    <string name="no_internet">No connection available.</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change these placeholder texts -->
    <string name="rer_tmp">RER</string>
    <string name="metro_tmp">Metro</string>
    <string name="transilien_tmp">Transilien</string>
    <string name="tram_tmp">Tram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Form schedule -->
    <string name="next_transport">Next %1$s</string>
    <string name="line">Line</string>
    <string name="station">Station</string>
    <string name="destination">Destination</string>
    <string name="choose_line">Choose a line</string>
    <string name="choose_station">Choose a station</string>
    <string name="choose_destination">Choose a destination</string>
    <string name="ok">OK</string>

    <!-- TMP -->
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>
</resources>
