<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.altoine.instatrain.TrainScheduleDialogFragment">

    <LinearLayout
        android:id="@+id/ll_form_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_line"/>
        <Spinner
            android:id="@+id/sp_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_line"/>

        <TextView
            android:id="@+id/tv_label_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_station"/>
        <Spinner
            android:id="@+id/sp_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_station"/>

        <TextView
            android:id="@+id/tv_label_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_destination"/>
        <Spinner
            android:id="@+id/sp_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/choose_destination"/>
    </LinearLayout>
</ScrollView> -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:textSize="@dimen/customTitle" />

    <Spinner
        android:id="@+id/sp_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_line" />

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/excellent"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/station"
        android:textSize="@dimen/customTitle" />

    <Spinner
        android:id="@+id/sp_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_station"/>

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ssidLit"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/destination"
        android:textSize="@dimen/customTitle" />

    <Spinner
        android:id="@+id/sp_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_destination"/>

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/securityType"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" /> -->

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/password"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/showPassword"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" /> -->
</LinearLayout>
